--- a/style_index.css
+++ b/style_index.css
@@ -1,9 +1,23 @@
+html, body{
+    height: 100%;
+    margin: 0px;
+}
+
 body{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
     align-items: center;
     row-gap: 15px;
+}
+
+.instrucao{
+    width: 50%;
 }
 
 form{
@@ -31,3 +45,7 @@ button{
     width: fit-content;
 }
 
+.rodape{
+    padding-bottom: 10px;
+    align-self: center;
+}
